# osdev

./: Cargo.toml
onesh/: Cargo.toml
onesh/src/: builtin.rs  cli.rs  executor.rs  lib.rs  main.rs  parser.rs  repl.rs  scanner.rs  sym_tab.rs  tokenizer.rs  word_exp.rs
onesh/src/cli/: cli.rs
onesh/src/shell_builtins/: cd.rs  currenttime.rs  dump.rs  mod.rs  pwd.rs
process/: Cargo.toml
process/src/: main.rs
pss/: Cargo.toml
pss/src/: lib.rs  main.rs
pss/src/proc_linux/: status.rs
twosh/: Cargo.toml
twosh/src/: main.rs
